fix on tablet

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -1084,6 +1084,9 @@ a.sp-video:after{content:'\25B6';position:absolute;width:45px;padding-left:5px;h
 
 
 @media all and (min-width: 768px) and (max-width: 959px) {
+	.sB1{
+		font-size: 1.2rem;
+	}
 	.sB3{
 		margin: 0 50px 1em;
 		font-size: 2rem;
